[gd_scene load_steps=4 format=3 uid="uid://c47y8d4xspkgo"]

[ext_resource type="Script" path="res://scripts/GUI_elements/SaveSlot.gd" id="1_t5hko"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2612y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r1p1s"]

[node name="SaveSlot" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -30.0
offset_right = 39.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_t5hko")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_2612y")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Load" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Load"

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(5, 2.08165e-12)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_r1p1s")

[node name="Delete" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Delete"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Delete" to="." method="_on_delete_pressed"]
